resources/docs/1.7/fullyloaded/reserved-seating.md
# Reserved Seating

Add any kind of seating arrangement e.g Stadiums, Townhalls, Cinema, Restaurants, Lounges, etc.

---

![18-seat-booked](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/18-seat-booked.png "18-seat-booked")

---

- [Requirements](#Requirements)
- [Add Reserved Seating](#Add-Reserved-Seating)
- [Booking Seats](#Booking-Seats)


<a name="Requirements"></a> 
## Requirements

Before start creating reserved seating tickets, you need two types of good quality images-

1. A full image of seating arrangement. Here's a sample image-

---

![4-seating-arrangement](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/4-seating-arrangement.jpg "4-seating-arrangement")

---

2. Then, you'll need cropped images for different tickets of different types of seats like executive, vip, etc. Here are sample images-

---

![8-royal-platinum](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/8-royal-platinum.jpg "8-royal-platinum")

---

![7-royal](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/7-royal.jpg "7-royal")

---

![6-club](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/6-club.jpg "6-club")

---

![5-executive](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/5-executive.jpg "5-executive")

---


<a name="Add-Reserved-Seating"></a> 
## Add Reserved Seating

Follow the below steps to add reserved seating tickets.

1. Go to Event Edit Page -> **Tickets** Tab.
2. Create Tickets for the event.
3. Then click **Seating Chart** button.

    ---

    ![1-add-seating-chart](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/1-add-seating-chart.png "1-add-seating-chart")

    ---

4. On the Popup, upload cropped particular ticket seating image.

    ---

    ![2-add-seats-to-tickets](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/2-add-seats-to-tickets.png "2-add-seats-to-tickets")

    ---

5. Then, start clicking on each seat block to add Seating. Click in the center of each seat block to add seats consistently.

    ---

    ![3-add-seats-to-tickets-1](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/3-add-seats-to-tickets-1.png "3-add-seats-to-tickets-1")

    ---

6. You can rename seats by clicking on the Seat you added.

    ---

    ![9-seating-update-seat-name](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/9-seating-update-seat-name.png "9-seating-update-seat-name")

    ---

7. You can also disable a seat after adding it. The disabled seats won't be able to booked, but they'll show as disabled seats on Checkout popup.
8. You can also disable seats for pre-reserved or advanced-reserved seats.

    ---

    ![10-seating-disable-seat](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/10-seating-disable-seat.png "10-seating-disable-seat")

    ---

9. You can only add upto Max Seats which is Total Ticket Quantity.
10. Repeat the same steps to add Reserved seating for other multiple tickets.

    ---

    ![11-seating-executive](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/11-seating-executive.png "11-seating-executive")

    ---

    ![12-seating-club](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/12-seating-club.png "12-seating-club")

    ---

    ![13-seating-royal](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/13-seating-royal.png "13-seating-royal")

    ---

    ![14-seating-royal-platinum](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/14-seating-royal-platinum.png "14-seating-royal-platinum")

    ---


11. To keep a ticket for General Seating (No reserved seating), then don't add Seats, and keep it as is.
12. Finally, go to **Media Tab** and add the full image of seating arrangement in Seatingchart Image.

    ---

    ![15-seatingchart-image-upload](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/15-seatingchart-image-upload.png "15-seatingchart-image-upload")

    ---


<a name="Booking-Seats"></a> 
## Booking Seats

Once you're done adding Reserved Seating, you can see the Reserved seating option on Event Page.

1. You can see the Full Seating arrangement image on the Event page.

    ---

    ![16-seating-chart-event-page](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/16-seating-chart-event-page.png "16-seating-chart-event-page")

    ---

2. Then, on the Checkout popup, you can see the Reserved seating chart for each ticket.
3. Select seats that you wanna book and checkout. Simple. 

    ---

    ![17-seat-booking](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/17-seat-booking.png "17-seat-booking")

    ---

4. You can see the legends showing Reserved, Selected, Available and Disabled seats.

    ---

    ![18-seat-booked](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/18-seat-booked.png "18-seat-booked")

    ---

5. If the Attendee is booking multiple seats, then he/she need to add each Attendee name, phone and address.
6. Organizer and Admin can see the Attendee details from Booking detail page.

    ---

    ![19-manage-booking-view-attendee](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/19-manage-booking-view-attendee.png "19-manage-booking-view-attendee")

    ---

    ![20-booking-attendee-detail](https://eventmie-pro-docs.classiebit.com//images/fullyloaded/20-booking-attendee-detail.png "20-booking-attendee-detail")

    ---